# qiita_high_likes_rss

./: Cargo.toml  README.md  feed.xml  index.html  last_build.txt  requirements.md
.github/workflows/: update-feed.yml
config/: config.yaml
scripts/: bootstrap_gh_pages.sh  feed.xml  index.html
src/: lib.rs  main.rs
src/modules/: atom.rs  config.rs  error.rs  html.rs  mod.rs  qiita_api.rs  state.rs
state/: articles.json
tests/: atom_minimum.rs
