[package]
name = "qiita_high_likes_rss"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "qiita-feed"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
quick-xml = "0.31.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
roxmltree = "0.19.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
